# http-file-uploader

./: Cargo.toml  flake.nix
.github/workflows/: build.yml
src/: lib.rs  logger.rs  main.rs  naming.rs
src/server/: mod.rs  naming.rs  routes.rs  utils.rs
src/server/postprocessing/: html.html  html.rs  html_head.html  md.html  md.rs  mod.rs
