[package]
name = "http-file-uploader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "=1.0.100"
bytes = "=1.11.0"
futures = "=0.3.31"
headers = "=0.4.1"
infer = "=0.19.0"
mime = "=0.3.17"
mime_guess = "=2.0.5"
rand = "=0.9.2"
reqwest = { version = "=0.12.26", default-features = false, features = [
    "charset",
    "http2",
    "rustls-tls",
    "stream",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
] }
tempfile = "=3.23.0"
tokio = { version = "=1.48.0", features = ["full"] }
tokio-stream = { version = "=0.1.17", features = ["full"] }
tokio-util = { version = "=0.7.17", features = ["full"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
url = "=2.5.7"
warp = { version = "=0.4.2", features = ["server"] }
