[package]
name = "http-file-uploader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "=1.0.102"
bytes = "=1.11.1"
futures = "=0.3.32"
headers = "=0.4.1"
infer = "=0.19.0"
mime = "=0.3.17"
mime_guess = "=2.0.5"
rand = "=0.10.0"
reqwest = { version = "=0.13.2", features = [
    "stream",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
] }
tempfile = "=3.27.0"
tokio = { version = "=1.50.0", features = ["full"] }
tokio-stream = { version = "=0.1.18", features = ["full"] }
tokio-util = { version = "=0.7.18", features = ["full"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
url = "=2.5.8"
warp = { version = "=0.4.2", features = ["server"] }
